Fix answers color/alignment

--- a/app/assets/stylesheets/components/_card_posts.scss
+++ b/app/assets/stylesheets/components/_card_posts.scss
@@ -114,8 +114,7 @@
   justify-content: space-between;
   align-items: flex-end;
   p {
-    margin-bottom: 0;
-    color: #a5a5a5;
+    padding-bottom: 0;
     font-size: 15px;
   }
 
@@ -146,8 +145,8 @@
   justify-content: space-between;
   flex: 1;
   p {
-  margin: 0;
-  padding: 10px;
+  // margin: 0;
+  // padding: 10px;
   }
   h5 {
   font-size: 16px;
